--- a/stable/bookstack/requirements.yaml
+++ b/stable/bookstack/requirements.yaml
@@ -1,5 +1,5 @@
 dependencies:
 - name: mariadb
-  version: 7.3.10
+  version: 7.3.x
   repository: https://kubernetes-charts.storage.googleapis.com/
   condition: mariadb.enabled
